--- a/program.html
+++ b/program.html
@@ -93,7 +93,7 @@ Simon Clematide, Isabel Meraner, Noah Bubenhofer and Martin Volk</td>
 <tr>
   <td valign="top" width="125">12:15&#8211;12:45</td>
   <td valign="top" align="left"><i>Hands-on: a five day text mining course for humanists and social scientists in R</i> <br>
-	  <a href="http://ceur-ws.org/Vol-1918/wiedemann.pdf" target="_blank">[pdf]</a> [slides]<br>
+	  <a href="http://ceur-ws.org/Vol-1918/wiedemann.pdf" target="_blank">[pdf]</a> <a href="slides/wiedemann_niekler_slides_Teach4DH.pdf" target="_blank">[slides]</A><br>
 Gregor Wiedemann and Andreas Niekler</td>
 </tr>
 
