--- a/program.html
+++ b/program.html
@@ -133,7 +133,7 @@ Gregor Wiedemann and Andreas Niekler</td>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
   <td valign="top" align="left"><i>Challenges in digital literacy in English curriculum</i> <br> 
-	   <a href="http://ceur-ws.org/Vol-1918/lam.pdf" target="_blank">[pdf]</a> [poster]<br> Charles Lam and Catherine Wong
+	   <a href="http://ceur-ws.org/Vol-1918/lam.pdf" target="_blank">[pdf]</a> <a href="slides/LamWong_poster_Teach4DH.pdf" target="_blank">[poster]</a><br> Charles Lam and Catherine Wong
 </td></tr>
 
 <tr>
