--- a/program.html
+++ b/program.html
@@ -115,7 +115,7 @@ Gregor Wiedemann and Andreas Niekler</td>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
   <td valign="top" align="left"><i>LEA - Linguistic Exercises with Annotation tools</i> <br>
-	  <a href="http://ceur-ws.org/Vol-1918/barteld.pdf" target="_blank">[pdf]</a> [poster]<br> 
+	  <a href="http://ceur-ws.org/Vol-1918/barteld.pdf" target="_blank">[pdf]</a> <a href="slides/barteld_flick_poster_Teach4DH.pdf" target="_blank">[poster]</a><br> 
 	  Fabian Barteld and Johanna Flick
 </td></tr>
 <tr>
